--- a/packages/scrapers/package.json
+++ b/packages/scrapers/package.json
@@ -19,5 +19,9 @@
     "build": "rimraf lib/ && tsc",
     "build:watch": "tsc --watch --sourcemap",
     "clean": "rimraf lib/ && rimraf coverage/"
+  },
+  "dependencies": {
+    "axios": "^1.1.3",
+    "cheerio": "^1.0.0-rc.12"
   }
 }
