--- a/package.json
+++ b/package.json
@@ -20,17 +20,27 @@
   "@comment scripts": {
     "build": "compile production code of all workspaces",
     "build:watch": "watch and compile of all workspaces in development mode",
+    "test": "run code tests of all workspaces",
+    "test:watch": "watch and run code tests of all workspaces",
+    "test:coverage": "collect test coverage of all workspaces",
     "clean": "remove compiled code and coverage code of all workspaces",
     "execute": "run all workspace scripts"
   },
   "scripts": {
     "build": "turbo run build",
     "build:watch": "turbo run build:watch --parallel",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "clean": "turbo run clean --parallel",
     "execute": "turbo run execute --parallel"
   },
   "devDependencies": {
+    "@types/jest": "^29.1.2",
+    "@types/node": "^18.11.0",
+    "jest": "^29.2.0",
     "rimraf": "^3.0.2",
+    "ts-jest": "^29.0.3",
     "turbo": "^1.5.6",
     "typescript": "^4.8.4"
   }
