--- a/packages/scrapers/package.json
+++ b/packages/scrapers/package.json
@@ -13,11 +13,17 @@
   "@comment scripts": {
     "build": "compile production code",
     "build:watch": "watch and compile code",
+    "test": "test code",
+    "test:watch": "watch and test code",
+    "test:coverage": "collect tests' coverage",
     "clean": "remove compiled code and coverage code"
   },
   "scripts": {
     "build": "rimraf lib/ && tsc",
     "build:watch": "tsc --watch --sourcemap",
+    "test": "yarn --cwd ../../ jest --selectProjects scrapers",
+    "test:watch": "yarn --cwd ../../ jest --selectProjects scrapers --watch",
+    "test:coverage": "yarn --cwd ../../ jest --selectProjects scrapers --coverage",
     "clean": "rimraf lib/ && rimraf coverage/"
   },
   "dependencies": {
